--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="cell medium-8 medium-offset-2">
                 <h2 class="sub-text">What will you be able to do?</h2>
                 <div class="grid-x grid-x-marigin">
-                    <div class="cell small-6 preview">
+                    <div class="cell large-6 preview">
                         <figure id="information-holder">
                             <img src="/images/find.PNG">
                             <figcaption>
@@ -56,7 +56,7 @@
                             </figcaption>
                         </figure>
                     </div>
-                    <div class="cell small-6 preview">
+                    <div class="cell large-6 preview">
                         <figure id="information-holder">
                             <img src="/images/view.PNG">
                             <figcaption>
@@ -65,7 +65,7 @@
                         </figure>
                     </div>
 
-                    <div class="cell small-6 preview">
+                    <div class="cell large-6 preview">
                         <figure id="information-holder">
                             <img src="/images/write.PNG">
                             <figcaption>
@@ -74,7 +74,7 @@
                         </figure>
                     </div>
 
-                    <div class="cell small-6 preview">
+                    <div class="cell large-6 preview">
                         <figure id="information-holder">
                             <img src="images/update.png">
                             <figcaption>
